ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: shivamkesarwani.in
      http:
        paths:
          - path: /uptime
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000
          - path: /auth/users
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/tickets
            pathType: Prefix
            backend:
              service:
                name: tickets-srv
                port:
                  number: 3000
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000
          - path: /issuetracker
            pathType: Prefix
            backend:
              service:
                name: issuetracker-srv
                port:
                  number: 3000
          - path: /js
            pathType: Prefix
            backend:
              service:
                name: issuetracker-srv
                port:
                  number: 3000
          - path: /css
            pathType: Prefix
            backend:
              service:
                name: issuetracker-srv
                port:
                  number: 3000
          - path: /ticketing
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
          - path: /dsa
            pathType: Prefix
            backend:
              service:
                name: dsa-frontend-srv
                port:
                  number: 3000
          - path: /dsaapi
            pathType: Prefix
            backend:
              service:
                name: dsa-backend-srv
                port:
                  number: 3000
          # - path: /portfolio
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: portfolio-srv
          #       port:
          #         number: 3000
